# rlhf-learning-tinyllama-1.1B

./: .gitignore  pyproject.toml
src/: debug.py  eval_sft.py  eval_sft_unsloth.py  ppo.py  train_sft.py  train_sft_unsloth.py
src/models/sft/checkpoint-1000/: scheduler.pt  trainer_state.json
src/models/sft/checkpoint-1500/: scheduler.pt  trainer_state.json
src/models/sft/checkpoint-2000/: README.md  scheduler.pt  trainer_state.json
src/models/sft/checkpoint-2500/: scheduler.pt  trainer_state.json
src/models/sft/checkpoint-3000/: scheduler.pt  trainer_state.json
src/models/sft/checkpoint-3500/: scheduler.pt  trainer_state.json
src/models/sft/checkpoint-4000/: scheduler.pt  trainer_state.json
src/models/sft/checkpoint-4500/: scheduler.pt  trainer_state.json
src/models/sft/checkpoint-500/: scheduler.pt  trainer_state.json
src/models/sft/checkpoint-5000/: scheduler.pt  trainer_state.json
src/models/sft/checkpoint-5500/: scheduler.pt  trainer_state.json
src/models/sft/checkpoint-6000/: adapter_config.json  scheduler.pt  trainer_state.json
src/models/sft/checkpoint-6500/: scheduler.pt  trainer_state.json
src/models/sft/checkpoint-6501/: scheduler.pt  trainer_state.json
src/wandb/: latest-run
