[tool.poetry]
name = "rlhf-learning-tinyllama"
version = "0.1.0"
description = "RLHF training for TinyLlama"
authors = ["Yuvanesh Sankar"]
license = "MIT"
readme = "README.md"
package-mode = false
packages = [{include = "rlhf_learning_tinyllama", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11.9,<3.14"
torch = ">=2.4.0"
transformers = "4.57.3"
trl = ">=0.18.2,<0.19.0"
datasets = ">4.1.0,<4.4.0"
peft = ">=0.18.0"
accelerate = ">=1.1.0"
bitsandbytes = ">=0.45.5,<0.46.0 "
wandb = "0.17.7"
py3nvml = "0.2.7"
unsloth = {git = "https://github.com/unslothai/unsloth.git", extras = ["colab-new"]}

[tool.poetry.group.dev.dependencies]
#flash-attn = ">=2.7.0"
rich = "13.7.1"
tyro = "0.8.7"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
